Added Crazy counting frontend components and dynamic component routing

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply overflow-hidden w-screen h-screen text-white;
+  @apply overflow-hidden w-dvw h-dvh text-white;
   background-color: var(--secondary, lightblue);
 }
 
