Moved the button styling

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -23,3 +23,15 @@ body {
 .text-title {
   @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl;
 }
+
+button {
+  box-shadow: 0.5rem 0.5rem 0 #000;
+  transition:
+    transform 0.1s ease-in-out,
+    box-shadow 0.1s ease-in-out !important;
+}
+
+button:active {
+  transform: translate(0.5rem, 0.5rem) !important;
+  box-shadow: 0.1rem 0.1rem 0 #000 !important;
+}
